--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -541,6 +541,7 @@ footer
       width:auto;
       height:auto;
       background:rgba(0,0,0,0.75);
+      position:relative;
     }
     .change_profile_image
     {
@@ -1331,23 +1332,43 @@ footer
   top:15px;
 }
 
-
-.cover_image_setting_container
+.image_setting_container
 {
-  width:100%;
-  .cover_image_demo
-  {
-    width:100%;
-    height:300px;
-    overflow:hidden;
-    border:1px solid #1a1a1a;
-    cursor:s-resize;
+  .cover_image_setting_container {
+    width: 100%;
+    .cover_image_demo {
+      width: 100%;
+      height: 300px;
+      overflow: hidden;
+      border: 1px solid #1a1a1a;
+      cursor: s-resize;
 
-    img
+      img {
+        min-width: 100%;
+        width: 100%;
+        height: auto;
+      }
+    }
+  }
+
+  .profile_image_setting_container
+  {
+    width:250px;
+    margin:0px auto;
+    .profile_image_demo
     {
-      min-width:100%;
-      width:100%;
-      height:auto;
+      @include border-radius(150px);
+      border:1px solid #1a1a1a;
+      overflow: hidden;
+      width:250px;
+      height:250px;
+      background:rgba(0,0,0,0.75);
+      img
+      {
+        width:auto;
+        height:auto;
+        min-width:300px;
+      }
     }
   }
 }
