--- a/resources/assets/sass/welcomepage.scss
+++ b/resources/assets/sass/welcomepage.scss
@@ -133,14 +133,31 @@ $banner-form-padding:5px;
   height: auto;
   margin-top: 50px;
   color:#FFFFFF;
+  z-index: -1;
 
-  h1
+  .black_gloss
+  {
+    background:rgba(0,0,0,0.75);
+    height:100%;
+    min-height:$banner-min-height;
+  }
+
+  h1,h4
   {
     font-weight: 700;
     @include text-shadow(0px, 0px, 20px, null, rgba(0,0,0,1));
     font-size: 36px;
     text-align: center;
     line-height: 180%;
+  }
+
+  h4
+  {
+    font-size: 20px;
+    text-align: left;
+//    padding:10px;
+//    background:rgba(0,0,0,0.75);
+//    border:1px solid #000000;
   }
 
   .container
@@ -182,7 +199,7 @@ $banner-form-padding:5px;
   }
   .sign_in_container
   {
-    background:rgba(0,0,0,0.50);
+    background:rgba(0,0,0,0.75);
     padding:15px;
   }
   .form_container
