--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -95,6 +95,16 @@ p
 }
 
 
+.help_link
+{
+  font-size: 9px;
+  text-decoration: none;
+  font-weight: 700;
+  margin:0px 5px;
+  color:#037bac;
+}
+
+
 header
 {
   position:fixed;
@@ -755,9 +765,9 @@ footer
               img
               {
                 min-width:100%;
-                min-height:150px;
-                width:150px;
                 height:150px;
+                width:auto;
+                max-width:none;
               }
               .endorser_name
               {
@@ -789,8 +799,9 @@ footer
             {
               img
               {
-                width:100%;
-                height:auto;
+                width:auto;
+                height:150px;
+                max-width:none;
               }
               .endorser_name
               {
@@ -1209,7 +1220,7 @@ footer
         margin-bottom: 15px;
         & > ul > li
         {
-          font-weight: 700;
+          font-weight: 300;
           font-size: 14px;
           margin-bottom: 5px;
           line-height: 150%;
