--- a/public/css/welcomepage.css
+++ b/public/css/welcomepage.css
@@ -6331,6 +6331,14 @@ header {
   .banner h4 {
     font-size: 20px;
     text-align: left; }
+  .banner h3 {
+    margin-top: 5px;
+    margin-bottom: 15px;
+    text-align: center;
+    font-size: 20px; }
+    .banner h3 a {
+      text-decoration: none;
+      text-align: center; }
   .banner .container {
     padding: 50px 15px; }
   .banner .usertypetabpanel {
