--- a/resources/assets/sass/welcomepage.scss
+++ b/resources/assets/sass/welcomepage.scss
@@ -159,6 +159,18 @@ $banner-form-padding:5px;
 //    background:rgba(0,0,0,0.75);
 //    border:1px solid #000000;
   }
+  h3
+  {
+    margin-top: 5px;
+    margin-bottom: 15px;
+    text-align: center;
+    font-size: 20px;
+    a
+    {
+      text-decoration: none;
+      text-align: center;
+    }
+  }
 
   .container
   {
