--- a/resources/assets/lib/css/main.css
+++ b/resources/assets/lib/css/main.css
@@ -31,6 +31,14 @@ label {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5); }
+  .t-button.disabled {
+    background: #639351;
+    text-shadow: 0px 0px 0px 0px;
+    -moz-text-shadow: 0px 0px 0px 0px;
+    -webkit-text-shadow: 0px 0px 0px 0px;
+    box-shadow: 0px 0px 0px 0px;
+    -moz-box-shadow: 0px 0px 0px 0px;
+    -webkit-box-shadow: 0px 0px 0px 0px; }
 
 .t-button:hover, .t-button:focus, .t-button:visited {
   color: #FFFFFF;
@@ -39,6 +47,11 @@ label {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75); }
+  .t-button:hover.disabled, .t-button:focus.disabled, .t-button:visited.disabled {
+    background: #639351;
+    box-shadow: 0px 0px 0px 0px;
+    -moz-box-shadow: 0px 0px 0px 0px;
+    -webkit-box-shadow: 0px 0px 0px 0px; }
 
 .statistic_button, .references_button {
   padding: 2px 15px;
@@ -63,6 +76,9 @@ body {
 
 p {
   position: relative; }
+
+a {
+  cursor: pointer; }
 
 .small_loading_image {
   width: 15px; }
@@ -897,6 +913,70 @@ footer {
       width: auto;
       height: auto;
       min-width: 300px; }
+
+/*------------------------------------------------------------------------------------------
+----------------------- Manager Side CSS styling -------------------------------------------
+--------------------------------------------------------------------------------------------*/
+.manager_app a {
+  text-decoration: none; }
+.manager_app .manager-profile-editPage .form-group .error_message_container {
+  margin-top: 5px; }
+  .manager_app .manager-profile-editPage .form-group .error_message_container .alert {
+    padding: 5px 15px; }
+.manager_app .manager-profile-editPage .career-history a.remove-year {
+  font-size: 12px;
+  color: #a94442;
+  display: block;
+  text-align: center;
+  margin-top: 5px; }
+.manager_app .manager-profile-editPage .career-history a.add-achievement {
+  font-size: 14px;
+  text-align: center;
+  display: inline-block;
+  padding: 5px; }
+.manager_app .manager-profile-editPage .career-history a.remove-achievement {
+  font-size: 20px;
+  color: #a94442;
+  display: inline-block;
+  padding: 5px; }
+.manager_app .manager-profile-editPage .career-history a.add-year {
+  font-size: 20px;
+  color: #203f15;
+  display: inline-block;
+  padding: 5px; }
+
+/*Styles for Pop Up Modal*/
+.screen_overlay {
+  background: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%; }
+
+.loading_pop_up_container {
+  position: fixed;
+  top: 30%;
+  left: 40%;
+  width: 20%;
+  min-height: 20%;
+  text-align: center;
+  background: rgba(255, 255, 255, 0.85);
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border: 2px solid white; }
+  .loading_pop_up_container h2 {
+    font-size: 16px;
+    margin: 10px 0px;
+    padding: 5px 5px;
+    text-transform: uppercase; }
+  .loading_pop_up_container .loading_image {
+    text-align: center;
+    height: 100%;
+    min-height: 30px;
+    width: auto;
+    padding: 15px 5px; }
 
 
 /*# sourceMappingURL=main.css.map */
