--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -17,6 +17,7 @@ $color-orange : rgba(255,125,0,1);
 
 $t-button-border-radius : 5px;
 $t-button-background-color-hover: #204f1F ;
+$t-button-background-color-disabled : #639351;
 
 .t-button
 {
@@ -27,14 +28,25 @@ $t-button-background-color-hover: #204f1F ;
   @include border-radius($t-button-border-radius);
   border:none;
   @include text-shadow(1px, 1px, 2px, 0px, rgba(0,0,0,0.25));
-  @include box-shadow(0px, 0px, 10px, 0px, rgba(0,0,0,0.50))
+  @include box-shadow(0px, 0px, 10px, 0px, rgba(0,0,0,0.50));
+  &.disabled
+  {
+    background:$t-button-background-color-disabled;
+    @include text-shadow(0px, 0px, 0px, 0px, null);
+    @include box-shadow(0px, 0px, 0px, 0px, null);
+  }
 }
 .t-button:hover,.t-button:focus,.t-button:visited
 {
   color:#FFFFFF;
   background: $t-button-background-color-hover;
   text-decoration: none;
-  @include box-shadow(0px, 0px, 10px, 0px, rgba(0,0,0,0.75))
+  @include box-shadow(0px, 0px, 10px, 0px, rgba(0,0,0,0.75));
+  &.disabled
+  {
+    background:$t-button-background-color-disabled;
+    @include box-shadow(0px, 0px, 0px, 0px, null);
+  }
 }
 
 .statistic_button,.references_button
@@ -74,6 +86,11 @@ body
 p
 {
   position:relative;
+}
+
+a
+{
+  cursor:pointer;
 }
 
 
@@ -1381,5 +1398,105 @@ footer
         min-width:300px;
       }
     }
+  }
+}
+
+
+
+
+
+/*------------------------------------------------------------------------------------------
+----------------------- Manager Side CSS styling -------------------------------------------
+--------------------------------------------------------------------------------------------*/
+.manager_app
+{
+  a
+  {
+    text-decoration: none;
+  }
+  .manager-profile-editPage
+  {
+    .form-group
+    {
+      .error_message_container
+      {
+        margin-top:5px;
+        .alert
+        {
+          padding:5px 15px;
+        }
+      }
+    }
+    .career-history
+    {
+      a.remove-year
+      {
+        font-size:12px;
+        color:#a94442;
+        display: block;
+        text-align: center;
+        margin-top: 5px;
+      }
+      a.add-achievement
+      {
+        font-size:14px;
+        text-align: center;
+        display: inline-block;
+        padding: 5px;
+      }
+      a.remove-achievement
+      {
+        font-size:20px;
+        color:#a94442;
+        display: inline-block;
+        padding: 5px;
+      }
+      a.add-year
+      {
+        font-size:20px;
+        color:$color-darkGreen;
+        display: inline-block;
+        padding: 5px;
+      }
+    }
+  }
+}
+
+
+/*Styles for Pop Up Modal*/
+.screen_overlay
+{
+  background:rgba(0,0,0,0.7);
+  position:fixed;
+  left:0px;
+  top:0px;
+  width:100%;
+  height:100%;
+}
+.loading_pop_up_container
+{
+  position:fixed;
+  top:30%;
+  left:40%;
+  width:20%;
+  min-height:20%;
+  text-align: center;
+  background:rgba(255,255,255,0.85);
+  @include border-radius(5px);
+  border:2px solid rgba(255,255,255,1);
+  h2
+  {
+    font-size:16px;
+    margin:10px 0px;
+    padding:5px 5px;
+    text-transform: uppercase;
+  }
+  .loading_image
+  {
+    text-align: center;
+    height:100%;
+    min-height:30px;
+    width:auto;
+    padding:15px 5px;
   }
 }
