Implemented Edit profile part

--- a/resources/assets/lib/css/main.css
+++ b/resources/assets/lib/css/main.css
@@ -930,6 +930,70 @@ footer {
 --------------------------------------------------------------------------------------------*/
 .manager_app a {
   text-decoration: none; }
+.manager_app .manager-profile-editPage .form-group .error_message_container {
+  margin-top: 5px; }
+  .manager_app .manager-profile-editPage .form-group .error_message_container .alert {
+    padding: 5px 15px; }
+.manager_app .manager-profile-editPage .career-history a.remove-year {
+  font-size: 12px;
+  color: #a94442;
+  display: block;
+  text-align: center;
+  margin-top: 5px; }
+.manager_app .manager-profile-editPage .career-history a.add-achievement {
+  font-size: 14px;
+  text-align: center;
+  display: inline-block;
+  padding: 5px; }
+.manager_app .manager-profile-editPage .career-history a.remove-achievement {
+  font-size: 20px;
+  color: #a94442;
+  display: inline-block;
+  padding: 5px; }
+.manager_app .manager-profile-editPage .career-history a.add-year {
+  font-size: 20px;
+  color: #203f15;
+  display: inline-block;
+  padding: 5px; }
+
+/*Styles for Pop Up Modal*/
+.screen_overlay {
+  background: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%; }
+
+.loading_pop_up_container {
+  position: fixed;
+  top: 30%;
+  left: 40%;
+  width: 20%;
+  min-height: 20%;
+  text-align: center;
+  background: rgba(255, 255, 255, 0.85);
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border: 2px solid white; }
+  .loading_pop_up_container h2 {
+    font-size: 16px;
+    margin: 10px 0px;
+    padding: 5px 5px;
+    text-transform: uppercase; }
+  .loading_pop_up_container .loading_image {
+    text-align: center;
+    height: 100%;
+    min-height: 30px;
+    width: auto;
+    padding: 15px 5px; }
+
+/*------------------------------------------------------------------------------------------
+----------------------- Manager Side CSS styling -------------------------------------------
+--------------------------------------------------------------------------------------------*/
+.manager_app a {
+  text-decoration: none; }
 
 .manager_app .manager-profile-editPage .form-group .error_message_container {
   margin-top: 5px; }
